fix: margin spacing between sections

--- a/styles/main.css
+++ b/styles/main.css
@@ -5,6 +5,7 @@
 	--base-color-lightest: #fff;
 	--base-color-darkest: #111;
 	--border: 2rem;
+	--margin: 2rem;
 	--padding: 1rem;
 	--padding-button: 1rem 2rem;
 	--bg-container: #eee;
@@ -61,6 +62,19 @@ button {
 	border-radius: var(--border);
 }
 
+header {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+}
+
+section {
+	margin: var(--margin) 0;
+}
+
+article > p {
+	padding: var(--padding);
+}
+
 .title {
 	color: var(--text-title);
 	font-size: 1.5rem;
@@ -74,10 +88,10 @@ button {
 } */
 
 /* page wrapper */
-#wrapper {
+/* #wrapper {
 	display: grid;
 	margin: 0 1rem;
-}
+} */
 
 .container-bg {
 	background-color: var(--bg-container);
